2012-03-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13871]
	* math/w_exp2.c: Do not include <float.h>.
	(o_threshold, u_threshold): Remove.
	(__exp2): Calculate result before checking finiteness and calling
	__kernel_standard.
	* math/w_exp2f.c: Likewise.
	* math/w_exp2l.c: Likewise.
	* math/libm-test.inc (exp2_test): Require overflow exception for
	1e6 input.

	[BZ #3866]
	* sysdeps/i386/fpu/e_pow.S (__ieee754_pow): Test for y outside the
	range of signed 64-bit integers before using fistpll.  Remove
	checks for whether integers fit in mantissa bits.
	* sysdeps/i386/fpu/e_powf.S (__ieee754_powf): Test for y outside
	the range of signed 32-bit integers before using fistpl.  Remove
	checks for whether integers fit in mantissa bits.
	* sysdeps/i386/fpu/e_powl.S (p64): New object.
	(__ieee754_powl): Test for y outside the range of signed 64-bit
	integers before using fistpll.  Reduce 64-bit values to 63-bit
	ones as needed.
	* sysdeps/ieee754/dbl-64/e_pow.c (__ieee754_pow): Ensure
	divide-by-zero is raised for zero to large negative powers.
	* sysdeps/x86_64/fpu/e_powl.S (p64): New object.
	(__ieee754_powl): Test for y outside the range of signed 64-bit
	integers before using fistpll.  Reduce 64-bit values to 63-bit
	ones as needed.
	* math/libm-test.inc (pow_test): Add more tests.

2012-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	* debug/backtracesymsfd.c: Include <_itoa.h> instead of
	<stdio-common/_itoa.h>.
	* debug/segfault.c: Likewise.
	* elf/dl-cache.c: Likewise.
	* elf/dl-minimal.c: Likewise.
	* elf/dl-misc.c: Likewise.
	* elf/dl-sysdep.c: Likewise.
	* elf/dl-version.c: Likewise.
	* elf/rtld.c: Likewise.
	* hurd/hurdsock.c: Likewise.
	* hurd/lookup-retry.c: Likewise.
	* malloc/malloc.c: Likewise.
	* malloc/mtrace.c: Likewise.
	* nscd/nscd_getgr_r.c: Likewise.
	* nscd/nscd_getpw_r.c: Likewise.
	* nscd/nscd_getserv_r.c: Likewise.
	* posix/getopt_init.c: Likewise.
	* posix/wordexp.c: Likewise.
	* stdio-common/_itoa.c: Likewise.