@@ -1,3 +1,7 @@
+2012-03-21  Allan McRae  <allan@archlinux.org>
+
+	* timezone/Makefile: Do not install iso3166.tab and zone.tab
+
 2012-03-21  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #13871]
